--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 .container{
     display: flex;
@@ -19,7 +18,7 @@ body{
 }
 .button{
     padding: 15px 25px;
-    margin-bottom: 30px;
+    margin: 30px 0 30px 0;
     border: none;
     border-radius: 8px;
     background: rgb(0, 0, 0, 90%);
